test-antlr/libs/test1Parser.cpp

// Generated from test1.g4 by ANTLR 4.10.1


#include "test1Visitor.h"

#include "test1Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct Test1ParserStaticData final {
  Test1ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  Test1ParserStaticData(const Test1ParserStaticData&) = delete;
  Test1ParserStaticData(Test1ParserStaticData&&) = delete;
  Test1ParserStaticData& operator=(const Test1ParserStaticData&) = delete;
  Test1ParserStaticData& operator=(Test1ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag test1ParserOnceFlag;
Test1ParserStaticData *test1ParserStaticData = nullptr;

void test1ParserInitialize() {
  assert(test1ParserStaticData == nullptr);
  auto staticData = std::make_unique<Test1ParserStaticData>(
    std::vector<std::string>{
      "program", "program_line", "expression", "declare", "func_call", "func", 
      "func_line", "ret"
    },
    std::vector<std::string>{
      "", "';'", "'('", "')'", "'!'", "'*'", "'/'", "'+'", "'-'", "'&'", 
      "'|'", "'^'", "'=='", "'>'", "'<'", "'>='", "'<='", "'='", "','", 
      "'funk'", "'{'", "'}'", "'ret'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "CLAN_VEKTORA", "VEKTOR", "INT", "ID", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  test1ParserStaticData = staticData.release();
}

}

test1Parser::test1Parser(TokenStream *input) : test1Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

test1Parser::test1Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  test1Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *test1ParserStaticData->atn, test1ParserStaticData->decisionToDFA, test1ParserStaticData->sharedContextCache, options);
}

test1Parser::~test1Parser() {
  delete _interpreter;
}

const atn::ATN& test1Parser::getATN() const {
  return *test1ParserStaticData->atn;
}

std::string test1Parser::getGrammarFileName() const {
  return "test1.g4";
}

const std::vector<std::string>& test1Parser::getRuleNames() const {
  return test1ParserStaticData->ruleNames;
}

const dfa::Vocabulary& test1Parser::getVocabulary() const {
  return test1ParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView test1Parser::getSerializedATN() const {
  return test1ParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

test1Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<test1Parser::FuncContext *> test1Parser::ProgramContext::func() {
  return getRuleContexts<test1Parser::FuncContext>();
}

test1Parser::FuncContext* test1Parser::ProgramContext::func(size_t i) {
  return getRuleContext<test1Parser::FuncContext>(i);
}

tree::TerminalNode* test1Parser::ProgramContext::EOF() {
  return getToken(test1Parser::EOF, 0);
}

std::vector<test1Parser::Program_lineContext *> test1Parser::ProgramContext::program_line() {
  return getRuleContexts<test1Parser::Program_lineContext>();
}

test1Parser::Program_lineContext* test1Parser::ProgramContext::program_line(size_t i) {
  return getRuleContext<test1Parser::Program_lineContext>(i);
}


size_t test1Parser::ProgramContext::getRuleIndex() const {
  return test1Parser::RuleProgram;
}


std::any test1Parser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

test1Parser::ProgramContext* test1Parser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, test1Parser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(28);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case test1Parser::T__18: {
        enterOuterAlt(_localctx, 1);
        setState(17); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(16);
          func();
          setState(19); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == test1Parser::T__18);
        break;
      }

      case test1Parser::T__1:
      case test1Parser::T__3:
      case test1Parser::INT:
      case test1Parser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(22); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(21);
          program_line();
          setState(24); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << test1Parser::T__1)
          | (1ULL << test1Parser::T__3)
          | (1ULL << test1Parser::INT)
          | (1ULL << test1Parser::ID))) != 0));
        setState(26);
        match(test1Parser::EOF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Program_lineContext ------------------------------------------------------------------

test1Parser::Program_lineContext::Program_lineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

test1Parser::DeclareContext* test1Parser::Program_lineContext::declare() {
  return getRuleContext<test1Parser::DeclareContext>(0);
}

test1Parser::ExpressionContext* test1Parser::Program_lineContext::expression() {
  return getRuleContext<test1Parser::ExpressionContext>(0);
}


size_t test1Parser::Program_lineContext::getRuleIndex() const {
  return test1Parser::RuleProgram_line;
}


std::any test1Parser::Program_lineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitProgram_line(this);
  else
    return visitor->visitChildren(this);
}

test1Parser::Program_lineContext* test1Parser::program_line() {
  Program_lineContext *_localctx = _tracker.createInstance<Program_lineContext>(_ctx, getState());
  enterRule(_localctx, 2, test1Parser::RuleProgram_line);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(32);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      setState(30);
      declare();
      break;
    }

    case 2: {
      setState(31);
      expression(0);
      break;
    }

    default:
      break;
    }
    setState(34);
    match(test1Parser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

test1Parser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t test1Parser::ExpressionContext::getRuleIndex() const {
  return test1Parser::RuleExpression;
}

void test1Parser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FunkPozivContext ------------------------------------------------------------------

test1Parser::Func_callContext* test1Parser::FunkPozivContext::func_call() {
  return getRuleContext<test1Parser::Func_callContext>(0);
}

test1Parser::FunkPozivContext::FunkPozivContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any test1Parser::FunkPozivContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitFunkPoziv(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PromIzrazContext ------------------------------------------------------------------

tree::TerminalNode* test1Parser::PromIzrazContext::ID() {
  return getToken(test1Parser::ID, 0);
}

test1Parser::PromIzrazContext::PromIzrazContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any test1Parser::PromIzrazContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitPromIzraz(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IntIzrazContext ------------------------------------------------------------------

tree::TerminalNode* test1Parser::IntIzrazContext::INT() {
  return getToken(test1Parser::INT, 0);
}

test1Parser::IntIzrazContext::IntIzrazContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any test1Parser::IntIzrazContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitIntIzraz(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ZagradeIzrazContext ------------------------------------------------------------------

test1Parser::ExpressionContext* test1Parser::ZagradeIzrazContext::expression() {
  return getRuleContext<test1Parser::ExpressionContext>(0);
}

test1Parser::ZagradeIzrazContext::ZagradeIzrazContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any test1Parser::ZagradeIzrazContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitZagradeIzraz(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OpIzrazContext ------------------------------------------------------------------

std::vector<test1Parser::ExpressionContext *> test1Parser::OpIzrazContext::expression() {
  return getRuleContexts<test1Parser::ExpressionContext>();
}

test1Parser::ExpressionContext* test1Parser::OpIzrazContext::expression(size_t i) {
  return getRuleContext<test1Parser::ExpressionContext>(i);
}

test1Parser::OpIzrazContext::OpIzrazContext(ExpressionContext *ctx) { copyFrom(ctx); }


std::any test1Parser::OpIzrazContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitOpIzraz(this);
  else
    return visitor->visitChildren(this);
}

test1Parser::ExpressionContext* test1Parser::expression() {
   return expression(0);
}

test1Parser::ExpressionContext* test1Parser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  test1Parser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  test1Parser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, test1Parser::RuleExpression, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(46);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ZagradeIzrazContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(37);
      match(test1Parser::T__1);
      setState(38);
      expression(0);
      setState(39);
      match(test1Parser::T__2);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<OpIzrazContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(41);
      antlrcpp::downCast<OpIzrazContext *>(_localctx)->op = match(test1Parser::T__3);
      setState(42);
      expression(8);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<FunkPozivContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(43);
      func_call();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<PromIzrazContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(44);
      match(test1Parser::ID);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<IntIzrazContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(45);
      match(test1Parser::INT);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(62);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(60);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<OpIzrazContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(48);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(49);
          antlrcpp::downCast<OpIzrazContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == test1Parser::T__4

          || _la == test1Parser::T__5)) {
            antlrcpp::downCast<OpIzrazContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(50);
          antlrcpp::downCast<OpIzrazContext *>(_localctx)->right = expression(8);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<OpIzrazContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(51);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(52);
          antlrcpp::downCast<OpIzrazContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == test1Parser::T__6

          || _la == test1Parser::T__7)) {
            antlrcpp::downCast<OpIzrazContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(53);
          antlrcpp::downCast<OpIzrazContext *>(_localctx)->right = expression(7);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<OpIzrazContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(54);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(55);
          antlrcpp::downCast<OpIzrazContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << test1Parser::T__8)
            | (1ULL << test1Parser::T__9)
            | (1ULL << test1Parser::T__10))) != 0))) {
            antlrcpp::downCast<OpIzrazContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(56);
          antlrcpp::downCast<OpIzrazContext *>(_localctx)->right = expression(6);
          break;
        }

        case 4: {
          auto newContext = _tracker.createInstance<OpIzrazContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(57);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(58);
          antlrcpp::downCast<OpIzrazContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << test1Parser::T__11)
            | (1ULL << test1Parser::T__12)
            | (1ULL << test1Parser::T__13)
            | (1ULL << test1Parser::T__14)
            | (1ULL << test1Parser::T__15))) != 0))) {
            antlrcpp::downCast<OpIzrazContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(59);
          antlrcpp::downCast<OpIzrazContext *>(_localctx)->right = expression(5);
          break;
        }

        default:
          break;
        } 
      }
      setState(64);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- DeclareContext ------------------------------------------------------------------

test1Parser::DeclareContext::DeclareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* test1Parser::DeclareContext::ID() {
  return getToken(test1Parser::ID, 0);
}

test1Parser::ExpressionContext* test1Parser::DeclareContext::expression() {
  return getRuleContext<test1Parser::ExpressionContext>(0);
}


size_t test1Parser::DeclareContext::getRuleIndex() const {
  return test1Parser::RuleDeclare;
}


std::any test1Parser::DeclareContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitDeclare(this);
  else
    return visitor->visitChildren(this);
}

test1Parser::DeclareContext* test1Parser::declare() {
  DeclareContext *_localctx = _tracker.createInstance<DeclareContext>(_ctx, getState());
  enterRule(_localctx, 6, test1Parser::RuleDeclare);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    antlrcpp::downCast<DeclareContext *>(_localctx)->left = match(test1Parser::ID);
    setState(66);
    antlrcpp::downCast<DeclareContext *>(_localctx)->op = match(test1Parser::T__16);
    setState(67);
    antlrcpp::downCast<DeclareContext *>(_localctx)->right = expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_callContext ------------------------------------------------------------------

test1Parser::Func_callContext::Func_callContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> test1Parser::Func_callContext::ID() {
  return getTokens(test1Parser::ID);
}

tree::TerminalNode* test1Parser::Func_callContext::ID(size_t i) {
  return getToken(test1Parser::ID, i);
}

std::vector<tree::TerminalNode *> test1Parser::Func_callContext::INT() {
  return getTokens(test1Parser::INT);
}

tree::TerminalNode* test1Parser::Func_callContext::INT(size_t i) {
  return getToken(test1Parser::INT, i);
}


size_t test1Parser::Func_callContext::getRuleIndex() const {
  return test1Parser::RuleFunc_call;
}


std::any test1Parser::Func_callContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitFunc_call(this);
  else
    return visitor->visitChildren(this);
}

test1Parser::Func_callContext* test1Parser::func_call() {
  Func_callContext *_localctx = _tracker.createInstance<Func_callContext>(_ctx, getState());
  enterRule(_localctx, 8, test1Parser::RuleFunc_call);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    match(test1Parser::ID);
    setState(70);
    match(test1Parser::T__1);
    setState(79);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == test1Parser::INT

    || _la == test1Parser::ID) {
      setState(71);
      _la = _input->LA(1);
      if (!(_la == test1Parser::INT

      || _la == test1Parser::ID)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(76);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == test1Parser::T__17) {
        setState(72);
        match(test1Parser::T__17);
        setState(73);
        _la = _input->LA(1);
        if (!(_la == test1Parser::INT

        || _la == test1Parser::ID)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(78);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(81);
    match(test1Parser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncContext ------------------------------------------------------------------

test1Parser::FuncContext::FuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> test1Parser::FuncContext::ID() {
  return getTokens(test1Parser::ID);
}

tree::TerminalNode* test1Parser::FuncContext::ID(size_t i) {
  return getToken(test1Parser::ID, i);
}

test1Parser::RetContext* test1Parser::FuncContext::ret() {
  return getRuleContext<test1Parser::RetContext>(0);
}

std::vector<test1Parser::Func_lineContext *> test1Parser::FuncContext::func_line() {
  return getRuleContexts<test1Parser::Func_lineContext>();
}

test1Parser::Func_lineContext* test1Parser::FuncContext::func_line(size_t i) {
  return getRuleContext<test1Parser::Func_lineContext>(i);
}


size_t test1Parser::FuncContext::getRuleIndex() const {
  return test1Parser::RuleFunc;
}


std::any test1Parser::FuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitFunc(this);
  else
    return visitor->visitChildren(this);
}

test1Parser::FuncContext* test1Parser::func() {
  FuncContext *_localctx = _tracker.createInstance<FuncContext>(_ctx, getState());
  enterRule(_localctx, 10, test1Parser::RuleFunc);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(test1Parser::T__18);
    setState(84);
    match(test1Parser::ID);
    setState(85);
    match(test1Parser::T__1);
    setState(94);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == test1Parser::ID) {
      setState(86);
      match(test1Parser::ID);
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == test1Parser::T__17) {
        setState(87);
        match(test1Parser::T__17);
        setState(88);
        match(test1Parser::ID);
        setState(93);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(96);
    match(test1Parser::T__2);
    setState(97);
    match(test1Parser::T__19);
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << test1Parser::T__1)
      | (1ULL << test1Parser::T__3)
      | (1ULL << test1Parser::INT)
      | (1ULL << test1Parser::ID))) != 0)) {
      setState(98);
      func_line();
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(104);
    ret();
    setState(105);
    match(test1Parser::T__20);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_lineContext ------------------------------------------------------------------

test1Parser::Func_lineContext::Func_lineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

test1Parser::DeclareContext* test1Parser::Func_lineContext::declare() {
  return getRuleContext<test1Parser::DeclareContext>(0);
}

test1Parser::ExpressionContext* test1Parser::Func_lineContext::expression() {
  return getRuleContext<test1Parser::ExpressionContext>(0);
}


size_t test1Parser::Func_lineContext::getRuleIndex() const {
  return test1Parser::RuleFunc_line;
}


std::any test1Parser::Func_lineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitFunc_line(this);
  else
    return visitor->visitChildren(this);
}

test1Parser::Func_lineContext* test1Parser::func_line() {
  Func_lineContext *_localctx = _tracker.createInstance<Func_lineContext>(_ctx, getState());
  enterRule(_localctx, 12, test1Parser::RuleFunc_line);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      setState(107);
      declare();
      break;
    }

    case 2: {
      setState(108);
      expression(0);
      break;
    }

    default:
      break;
    }
    setState(111);
    match(test1Parser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RetContext ------------------------------------------------------------------

test1Parser::RetContext::RetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

test1Parser::ExpressionContext* test1Parser::RetContext::expression() {
  return getRuleContext<test1Parser::ExpressionContext>(0);
}


size_t test1Parser::RetContext::getRuleIndex() const {
  return test1Parser::RuleRet;
}


std::any test1Parser::RetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<test1Visitor*>(visitor))
    return parserVisitor->visitRet(this);
  else
    return visitor->visitChildren(this);
}

test1Parser::RetContext* test1Parser::ret() {
  RetContext *_localctx = _tracker.createInstance<RetContext>(_ctx, getState());
  enterRule(_localctx, 14, test1Parser::RuleRet);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(test1Parser::T__21);
    setState(114);
    expression(0);
    setState(115);
    match(test1Parser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

bool test1Parser::sempred(RuleContext *context, size_t ruleIndex, size_t predicateIndex) {
  switch (ruleIndex) {
    case 2: return expressionSempred(antlrcpp::downCast<ExpressionContext *>(context), predicateIndex);

  default:
    break;
  }
  return true;
}

bool test1Parser::expressionSempred(ExpressionContext *_localctx, size_t predicateIndex) {
  switch (predicateIndex) {
    case 0: return precpred(_ctx, 7);
    case 1: return precpred(_ctx, 6);
    case 2: return precpred(_ctx, 5);
    case 3: return precpred(_ctx, 4);

  default:
    break;
  }
  return true;
}

void test1Parser::initialize() {
  std::call_once(test1ParserOnceFlag, test1ParserInitialize);
}
